// Vitest Snapshot v1

exports[`animated > autocomplete 1`] = `
[
  "animated",
  "animated-delay-0",
  "animated-delay-0ms",
  "animated-delay-0s",
  "animated-delay-1",
  "animated-delay-2",
  "animated-delay-3",
  "animated-delay-4",
  "animated-delay-5",
  "animated-delay-6",
  "animated-delay-7",
  "animated-delay-8",
  "animated-delay-9",
  "animated-delay-10",
  "animated-delay-10ms",
  "animated-delay-10s",
  "animated-delay-11",
  "animated-delay-11ms",
  "animated-delay-11s",
  "animated-delay-12",
  "animated-delay-12ms",
  "animated-delay-12s",
  "animated-delay-13",
  "animated-delay-13ms",
  "animated-delay-13s",
  "animated-delay-14",
  "animated-delay-14ms",
  "animated-delay-14s",
  "animated-delay-15",
  "animated-delay-15ms",
  "animated-delay-15s",
  "animated-delay-16",
  "animated-delay-16ms",
  "animated-delay-16s",
  "animated-delay-17",
  "animated-delay-17ms",
  "animated-delay-17s",
  "animated-delay-18",
  "animated-delay-18ms",
  "animated-delay-18s",
  "animated-delay-19",
  "animated-delay-19ms",
  "animated-delay-19s",
  "animated-delay-1ms",
  "animated-delay-1s",
  "animated-delay-20",
  "animated-delay-20ms",
  "animated-delay-20s",
  "animated-delay-21",
  "animated-delay-21ms",
  "animated-delay-21s",
  "animated-delay-22",
  "animated-delay-22ms",
  "animated-delay-22s",
  "animated-delay-23",
  "animated-delay-23ms",
  "animated-delay-23s",
  "animated-delay-24",
  "animated-delay-24ms",
  "animated-delay-24s",
  "animated-delay-25",
  "animated-delay-25ms",
  "animated-delay-25s",
  "animated-delay-26",
  "animated-delay-26ms",
  "animated-delay-26s",
  "animated-delay-27",
  "animated-delay-27ms",
  "animated-delay-27s",
  "animated-delay-28",
  "animated-delay-28ms",
  "animated-delay-28s",
  "animated-delay-29",
  "animated-delay-29ms",
  "animated-delay-29s",
  "animated-delay-2ms",
  "animated-delay-2s",
  "animated-delay-30",
  "animated-delay-30ms",
  "animated-delay-30s",
  "animated-delay-31",
  "animated-delay-31ms",
  "animated-delay-31s",
  "animated-delay-32",
  "animated-delay-32ms",
  "animated-delay-32s",
  "animated-delay-33",
  "animated-delay-33ms",
  "animated-delay-33s",
  "animated-delay-34",
  "animated-delay-34ms",
  "animated-delay-34s",
  "animated-delay-35",
  "animated-delay-35ms",
  "animated-delay-35s",
  "animated-delay-36",
  "animated-delay-36ms",
  "animated-delay-36s",
  "animated-delay-37",
  "animated-delay-37ms",
  "animated-delay-37s",
  "animated-delay-38",
  "animated-delay-38ms",
  "animated-delay-38s",
  "animated-delay-39",
  "animated-delay-39ms",
  "animated-delay-39s",
  "animated-delay-3ms",
  "animated-delay-3s",
  "animated-delay-40",
  "animated-delay-40ms",
  "animated-delay-40s",
  "animated-delay-41",
  "animated-delay-41ms",
  "animated-delay-41s",
  "animated-delay-42",
  "animated-delay-42ms",
  "animated-delay-42s",
  "animated-delay-43",
  "animated-delay-43ms",
  "animated-delay-43s",
  "animated-delay-44",
  "animated-delay-44ms",
  "animated-delay-44s",
  "animated-delay-45",
  "animated-delay-45ms",
  "animated-delay-45s",
  "animated-delay-46",
  "animated-delay-46ms",
  "animated-delay-46s",
  "animated-delay-47",
  "animated-delay-47ms",
  "animated-delay-47s",
  "animated-delay-48",
  "animated-delay-48ms",
  "animated-delay-48s",
  "animated-delay-49",
  "animated-delay-49ms",
  "animated-delay-49s",
  "animated-delay-4ms",
  "animated-delay-4s",
  "animated-delay-50",
  "animated-delay-50ms",
  "animated-delay-50s",
  "animated-delay-51",
  "animated-delay-51ms",
  "animated-delay-51s",
  "animated-delay-52",
  "animated-delay-52ms",
  "animated-delay-52s",
  "animated-delay-53",
  "animated-delay-53ms",
  "animated-delay-53s",
  "animated-delay-54",
  "animated-delay-54ms",
  "animated-delay-54s",
  "animated-delay-55",
  "animated-delay-55ms",
  "animated-delay-55s",
  "animated-delay-56",
  "animated-delay-56ms",
  "animated-delay-56s",
  "animated-delay-57",
  "animated-delay-57ms",
  "animated-delay-57s",
  "animated-delay-58",
  "animated-delay-58ms",
  "animated-delay-58s",
  "animated-delay-59",
  "animated-delay-59ms",
  "animated-delay-59s",
  "animated-delay-5ms",
  "animated-delay-5s",
  "animated-delay-60",
  "animated-delay-60ms",
  "animated-delay-60s",
  "animated-delay-61",
  "animated-delay-61ms",
  "animated-delay-61s",
  "animated-delay-62",
  "animated-delay-62ms",
  "animated-delay-62s",
  "animated-delay-63",
  "animated-delay-63ms",
  "animated-delay-63s",
  "animated-delay-64",
  "animated-delay-64ms",
  "animated-delay-64s",
  "animated-delay-65",
  "animated-delay-65ms",
  "animated-delay-65s",
  "animated-delay-66",
  "animated-delay-66ms",
  "animated-delay-66s",
  "animated-delay-6ms",
  "animated-delay-6s",
  "animated-delay-7ms",
  "animated-delay-7s",
  "animated-delay-8ms",
  "animated-delay-8s",
  "animated-delay-9ms",
  "animated-delay-9s",
  "animated-delay-none",
  "animated-infinite",
  "animated-repeat-0",
  "animated-repeat-1",
  "animated-repeat-0.1",
  "animated-repeat-2",
  "animated-repeat-1.2",
  "animated-repeat-3",
  "animated-repeat-2.3",
  "animated-repeat-4",
  "animated-repeat-3.4",
  "animated-repeat-5",
  "animated-repeat-4.5",
  "animated-repeat-6",
  "animated-repeat-5.6",
  "animated-repeat-7",
  "animated-repeat-6.7",
  "animated-repeat-8",
  "animated-repeat-7.8",
  "animated-repeat-9",
  "animated-repeat-8.9",
  "animated-repeat-10",
  "animated-repeat-9.10",
  "animated-repeat-11",
  "animated-repeat-10.11",
  "animated-repeat-12",
  "animated-repeat-11.12",
  "animated-repeat-13",
  "animated-repeat-12.13",
  "animated-repeat-14",
  "animated-repeat-13.14",
  "animated-repeat-15",
  "animated-repeat-14.15",
  "animated-repeat-16",
  "animated-repeat-15.16",
  "animated-repeat-17",
  "animated-repeat-16.17",
  "animated-repeat-18",
  "animated-repeat-17.18",
  "animated-repeat-19",
  "animated-repeat-18.19",
  "animated-repeat-20",
  "animated-repeat-19.20",
  "animated-repeat-21",
  "animated-repeat-20.21",
  "animated-repeat-22",
  "animated-repeat-21.22",
  "animated-repeat-23",
  "animated-repeat-22.23",
  "animated-repeat-24",
  "animated-repeat-23.24",
  "animated-repeat-25",
  "animated-repeat-24.25",
  "animated-repeat-26",
  "animated-repeat-25.26",
  "animated-repeat-27",
  "animated-repeat-26.27",
  "animated-repeat-28",
  "animated-repeat-27.28",
  "animated-repeat-29",
  "animated-repeat-28.29",
  "animated-repeat-30",
  "animated-repeat-29.30",
  "animated-repeat-31",
  "animated-repeat-30.31",
  "animated-repeat-32",
  "animated-repeat-31.32",
  "animated-repeat-33",
  "animated-repeat-32.33",
  "animated-repeat-34",
  "animated-repeat-33.34",
  "animated-repeat-35",
  "animated-repeat-34.35",
  "animated-repeat-36",
  "animated-repeat-35.36",
  "animated-repeat-37",
  "animated-repeat-36.37",
  "animated-repeat-38",
  "animated-repeat-37.38",
  "animated-repeat-39",
  "animated-repeat-38.39",
  "animated-repeat-40",
  "animated-repeat-39.40",
  "animated-repeat-41",
  "animated-repeat-40.41",
  "animated-repeat-42",
  "animated-repeat-41.42",
  "animated-repeat-43",
  "animated-repeat-42.43",
  "animated-repeat-44",
  "animated-repeat-43.44",
  "animated-repeat-45",
  "animated-repeat-44.45",
  "animated-repeat-46",
  "animated-repeat-45.46",
  "animated-repeat-47",
  "animated-repeat-46.47",
  "animated-repeat-48",
  "animated-repeat-47.48",
  "animated-repeat-49",
  "animated-repeat-48.49",
  "animated-repeat-50",
  "animated-repeat-49.50",
  "animated-repeat-51",
  "animated-repeat-50.51",
  "animated-repeat-52",
  "animated-repeat-51.52",
  "animated-repeat-53",
  "animated-repeat-52.53",
  "animated-repeat-54",
  "animated-repeat-53.54",
  "animated-repeat-55",
  "animated-repeat-54.55",
  "animated-repeat-56",
  "animated-repeat-55.56",
  "animated-repeat-57",
  "animated-repeat-56.57",
  "animated-repeat-58",
  "animated-repeat-57.58",
  "animated-repeat-59",
  "animated-repeat-58.59",
  "animated-repeat-60",
  "animated-repeat-59.60",
  "animated-repeat-61",
  "animated-repeat-60.61",
  "animated-repeat-62",
  "animated-repeat-61.62",
  "animated-repeat-63",
  "animated-repeat-62.63",
  "animated-repeat-64",
  "animated-repeat-63.64",
  "animated-repeat-65",
  "animated-repeat-64.65",
  "animated-repeat-66",
  "animated-repeat-65.66",
  "animated-repeat-66.67",
  "animated-repeat-infinite",
]
`;

exports[`animated > autocomplete 2`] = `
[
  "animated-repeat-0",
  "animated-repeat-1",
  "animated-repeat-0.1",
  "animated-repeat-2",
  "animated-repeat-1.2",
  "animated-repeat-3",
  "animated-repeat-2.3",
  "animated-repeat-4",
  "animated-repeat-3.4",
  "animated-repeat-5",
  "animated-repeat-4.5",
  "animated-repeat-6",
  "animated-repeat-5.6",
  "animated-repeat-7",
  "animated-repeat-6.7",
  "animated-repeat-8",
  "animated-repeat-7.8",
  "animated-repeat-9",
  "animated-repeat-8.9",
  "animated-repeat-10",
  "animated-repeat-9.10",
  "animated-repeat-11",
  "animated-repeat-10.11",
  "animated-repeat-12",
  "animated-repeat-11.12",
  "animated-repeat-13",
  "animated-repeat-12.13",
  "animated-repeat-14",
  "animated-repeat-13.14",
  "animated-repeat-15",
  "animated-repeat-14.15",
  "animated-repeat-16",
  "animated-repeat-15.16",
  "animated-repeat-17",
  "animated-repeat-16.17",
  "animated-repeat-18",
  "animated-repeat-17.18",
  "animated-repeat-19",
  "animated-repeat-18.19",
  "animated-repeat-20",
  "animated-repeat-19.20",
  "animated-repeat-21",
  "animated-repeat-20.21",
  "animated-repeat-22",
  "animated-repeat-21.22",
  "animated-repeat-23",
  "animated-repeat-22.23",
  "animated-repeat-24",
  "animated-repeat-23.24",
  "animated-repeat-25",
  "animated-repeat-24.25",
  "animated-repeat-26",
  "animated-repeat-25.26",
  "animated-repeat-27",
  "animated-repeat-26.27",
  "animated-repeat-28",
  "animated-repeat-27.28",
  "animated-repeat-29",
  "animated-repeat-28.29",
  "animated-repeat-30",
  "animated-repeat-29.30",
  "animated-repeat-31",
  "animated-repeat-30.31",
  "animated-repeat-32",
  "animated-repeat-31.32",
  "animated-repeat-33",
  "animated-repeat-32.33",
  "animated-repeat-34",
  "animated-repeat-33.34",
  "animated-repeat-35",
  "animated-repeat-34.35",
  "animated-repeat-36",
  "animated-repeat-35.36",
  "animated-repeat-37",
  "animated-repeat-36.37",
  "animated-repeat-38",
  "animated-repeat-37.38",
  "animated-repeat-39",
  "animated-repeat-38.39",
  "animated-repeat-40",
  "animated-repeat-39.40",
  "animated-repeat-41",
  "animated-repeat-40.41",
  "animated-repeat-42",
  "animated-repeat-41.42",
  "animated-repeat-43",
  "animated-repeat-42.43",
  "animated-repeat-44",
  "animated-repeat-43.44",
  "animated-repeat-45",
  "animated-repeat-44.45",
  "animated-repeat-46",
  "animated-repeat-45.46",
  "animated-repeat-47",
  "animated-repeat-46.47",
  "animated-repeat-48",
  "animated-repeat-47.48",
  "animated-repeat-49",
  "animated-repeat-48.49",
  "animated-repeat-50",
  "animated-repeat-49.50",
  "animated-repeat-51",
  "animated-repeat-50.51",
  "animated-repeat-52",
  "animated-repeat-51.52",
  "animated-repeat-53",
  "animated-repeat-52.53",
  "animated-repeat-54",
  "animated-repeat-53.54",
  "animated-repeat-55",
  "animated-repeat-54.55",
  "animated-repeat-56",
  "animated-repeat-55.56",
  "animated-repeat-57",
  "animated-repeat-56.57",
  "animated-repeat-58",
  "animated-repeat-57.58",
  "animated-repeat-59",
  "animated-repeat-58.59",
  "animated-repeat-60",
  "animated-repeat-59.60",
  "animated-repeat-61",
  "animated-repeat-60.61",
  "animated-repeat-62",
  "animated-repeat-61.62",
  "animated-repeat-63",
  "animated-repeat-62.63",
  "animated-repeat-64",
  "animated-repeat-63.64",
  "animated-repeat-65",
  "animated-repeat-64.65",
  "animated-repeat-66",
  "animated-repeat-65.66",
  "animated-repeat-66.67",
  "animated-repeat-infinite",
]
`;

exports[`animated > autocomplete 3`] = `
[
  "animated-delay-0",
  "animated-delay-0ms",
  "animated-delay-0s",
  "animated-delay-1",
  "animated-delay-10ms",
  "animated-delay-10s",
  "animated-delay-11ms",
  "animated-delay-11s",
  "animated-delay-12ms",
  "animated-delay-12s",
  "animated-delay-13ms",
  "animated-delay-13s",
  "animated-delay-14ms",
  "animated-delay-14s",
  "animated-delay-15ms",
  "animated-delay-15s",
  "animated-delay-16ms",
  "animated-delay-16s",
  "animated-delay-17ms",
  "animated-delay-17s",
  "animated-delay-18ms",
  "animated-delay-18s",
  "animated-delay-19ms",
  "animated-delay-19s",
  "animated-delay-1ms",
  "animated-delay-1s",
  "animated-delay-2",
  "animated-delay-20ms",
  "animated-delay-20s",
  "animated-delay-21ms",
  "animated-delay-21s",
  "animated-delay-22ms",
  "animated-delay-22s",
  "animated-delay-23ms",
  "animated-delay-23s",
  "animated-delay-24ms",
  "animated-delay-24s",
  "animated-delay-25ms",
  "animated-delay-25s",
  "animated-delay-26ms",
  "animated-delay-26s",
  "animated-delay-27ms",
  "animated-delay-27s",
  "animated-delay-28ms",
  "animated-delay-28s",
  "animated-delay-29ms",
  "animated-delay-29s",
  "animated-delay-2ms",
  "animated-delay-2s",
  "animated-delay-3",
  "animated-delay-30ms",
  "animated-delay-30s",
  "animated-delay-31ms",
  "animated-delay-31s",
  "animated-delay-32ms",
  "animated-delay-32s",
  "animated-delay-33ms",
  "animated-delay-33s",
  "animated-delay-34ms",
  "animated-delay-34s",
  "animated-delay-35ms",
  "animated-delay-35s",
  "animated-delay-36ms",
  "animated-delay-36s",
  "animated-delay-37ms",
  "animated-delay-37s",
  "animated-delay-38ms",
  "animated-delay-38s",
  "animated-delay-39ms",
  "animated-delay-39s",
  "animated-delay-3ms",
  "animated-delay-3s",
  "animated-delay-4",
  "animated-delay-40ms",
  "animated-delay-40s",
  "animated-delay-41ms",
  "animated-delay-41s",
  "animated-delay-42ms",
  "animated-delay-42s",
  "animated-delay-43ms",
  "animated-delay-43s",
  "animated-delay-44ms",
  "animated-delay-44s",
  "animated-delay-45ms",
  "animated-delay-45s",
  "animated-delay-46ms",
  "animated-delay-46s",
  "animated-delay-47ms",
  "animated-delay-47s",
  "animated-delay-48ms",
  "animated-delay-48s",
  "animated-delay-49ms",
  "animated-delay-49s",
  "animated-delay-4ms",
  "animated-delay-4s",
  "animated-delay-5",
  "animated-delay-50ms",
  "animated-delay-50s",
  "animated-delay-51ms",
  "animated-delay-51s",
  "animated-delay-52ms",
  "animated-delay-52s",
  "animated-delay-53ms",
  "animated-delay-53s",
  "animated-delay-54ms",
  "animated-delay-54s",
  "animated-delay-55ms",
  "animated-delay-55s",
  "animated-delay-56ms",
  "animated-delay-56s",
  "animated-delay-57ms",
  "animated-delay-57s",
  "animated-delay-58ms",
  "animated-delay-58s",
  "animated-delay-59ms",
  "animated-delay-59s",
  "animated-delay-5s",
  "animated-delay-6",
  "animated-delay-60ms",
  "animated-delay-60s",
  "animated-delay-61ms",
  "animated-delay-61s",
  "animated-delay-62ms",
  "animated-delay-62s",
  "animated-delay-63ms",
  "animated-delay-63s",
  "animated-delay-64ms",
  "animated-delay-64s",
  "animated-delay-65ms",
  "animated-delay-65s",
  "animated-delay-66ms",
  "animated-delay-66s",
  "animated-delay-6s",
  "animated-delay-7",
  "animated-delay-8",
  "animated-delay-9",
  "animated-delay-10",
  "animated-delay-11",
  "animated-delay-12",
  "animated-delay-13",
  "animated-delay-14",
  "animated-delay-15",
  "animated-delay-16",
  "animated-delay-17",
  "animated-delay-18",
  "animated-delay-19",
  "animated-delay-20",
  "animated-delay-21",
  "animated-delay-22",
  "animated-delay-23",
  "animated-delay-24",
  "animated-delay-25",
  "animated-delay-26",
  "animated-delay-27",
  "animated-delay-28",
  "animated-delay-29",
  "animated-delay-30",
  "animated-delay-31",
  "animated-delay-32",
  "animated-delay-33",
  "animated-delay-34",
  "animated-delay-35",
  "animated-delay-36",
  "animated-delay-37",
  "animated-delay-38",
  "animated-delay-39",
  "animated-delay-40",
  "animated-delay-41",
  "animated-delay-42",
  "animated-delay-43",
  "animated-delay-44",
  "animated-delay-45",
  "animated-delay-46",
  "animated-delay-47",
  "animated-delay-48",
  "animated-delay-49",
  "animated-delay-50",
  "animated-delay-51",
  "animated-delay-52",
  "animated-delay-53",
  "animated-delay-54",
  "animated-delay-55",
  "animated-delay-56",
  "animated-delay-57",
  "animated-delay-58",
  "animated-delay-59",
  "animated-delay-5ms",
  "animated-delay-60",
  "animated-delay-61",
  "animated-delay-62",
  "animated-delay-63",
  "animated-delay-64",
  "animated-delay-65",
  "animated-delay-66",
  "animated-delay-6ms",
  "animated-delay-75",
  "animated-delay-100",
  "animated-delay-150",
  "animated-delay-200",
  "animated-delay-300",
  "animated-delay-500",
  "animated-delay-700",
  "animated-delay-1000",
  "animated-delay-7ms",
  "animated-delay-7s",
  "animated-delay-8ms",
  "animated-delay-8s",
  "animated-delay-9ms",
  "animated-delay-9s",
  "animated-delay-none",
]
`;
